FIX 399 by explicitly opening JDK internals module (#428)
* FIX #399 by explicitly opening JDK internals module

* Drop builds for jdk 1.8 in builds

* Update github actions

* Update publish

* Fix

* Fix